# snaplet-haste

./: LICENSE  README.md  snaplet-ghcjs.cabal  snaplet-haste.cabal
Snap/Snaplet/: GHCJS.hs  Haste.hs
