name:                snaplet-haste
version:             0.1.0.0
synopsis:            serve javascript files compiled with haste
-- description:
license:             BSD3
license-file:        LICENSE
author:              Sönke Hahn
maintainer:          soenkehahn@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Snap.Snaplet.Haste
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.6 && <4.7,
    directory >=1.2 && <1.3,
    filepath >=1.3 && <1.4,
    lens >= 0.1 && <= 4.7,
    mtl >=2.1 && <2.2,
    process >=1.1 && <1.2,
    snap >=0.13 && <0.14,
    snap-core >=0.9 && <0.10,
    string-conversions >=0.3 && <0.4,
    transformers >=0.3 && <0.4
  -- hs-source-dirs:
  default-language:    Haskell2010
