name:                snaplet-haste
version:             0.1.0.0
synopsis:            serve javascript files compiled with haste
-- description:
license:             BSD3
license-file:        LICENSE
author:              Sönke Hahn
maintainer:          soenkehahn@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Snap.Snaplet.Haste
  -- other-modules:
  -- other-extensions:
  build-depends:
    base == 4.*,
    directory >=1.2,
    filepath >=1.3,
    lens,
    mtl >=2.1,
    process >=1.1,
    snap >=0.13,
    snap-core >=0.9,
    string-conversions >=0.3,
    transformers >=0.3
  -- hs-source-dirs:
  default-language:    Haskell2010
